--- a/public_html/assets/css/johndoe.css
+++ b/public_html/assets/css/johndoe.css
@@ -468,6 +468,49 @@ h6, .h6 {
   font-size: 1rem;
 }
 
+@keyframes caret {
+  50% {
+    border-color: transparent;
+  }
+}
+
+.input-wrapper {
+  display: block;
+  font-family: monospace;
+  font-size: 125%;
+  width: 50%;
+  > input,
+  > .placeholder {
+    display: block;
+    appearance: none;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    border: none;
+  }
+  > .placeholder {
+    pointer-events: none;
+    @include typed(
+      "How many roads must a man walk down before you call him a man?",
+      "How many seas must a white dove sail before she sleeps in the sand?",
+      "The answer, my friend, is blowin' in the wind",
+      1.5,
+      (
+        caret-width: 2px,
+        caret-space: 2px
+      )
+    );
+  }
+  > input {
+    &:focus,
+    &:active {
+      + .placeholder {
+        display: none;
+      }
+    }
+  }
+}
+
 .lead {
   font-size: 1.25rem;
   font-weight: 300;
@@ -616,6 +659,18 @@ pre code {
   font-size: inherit;
   color: inherit;
   word-break: normal;
+}
+
+
+
+@keyframes typing {
+  from { width: 0; } /* Commencer sans largeur (effet de taper) */
+  to { width: 100%; } /* Terminer avec toute la largeur */
+}
+
+@keyframes blink-caret {
+  from, to { border-color: transparent; }
+  50% { border-color: orange; } /* Effet de clignotement du curseur */
 }
 
 .pre-scrollable {
